# si-image-processing-lab

./: README.md  pyproject.toml
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml
src/si_image_processing/: pipeline_registry.py
src/si_image_processing/pipelines/image_processing/: __init__.py  nodes.py  pipeline.py
tests/: test_image_processing.py
