[tool.poetry]
name = "si-image-processing-lab"
version = "0.1.0"
description = "Laboratorio de procesamiento de imagenes - UCV"
authors = ["UCV"]
readme = "README.md"
packages = [{ include = "si_image_processing", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
kedro = "^0.19.0"
kedro-datasets = "^3.0.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.kedro]
package_name = "si_image_processing"
project_name = "si-image-processing-lab"
kedro_init_version = "0.19.0"
source_dir = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.kedro_telemetry]
project_id = "6dbedc1904f34940a464aa030f970943"
